# clinical-ai-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  BUILD-PLAYBOOK.md  CLAUDE.md  DECISIONS.md  GEMINI.md  Makefile  PRD.md  README.md  docker-compose.prod.yml  docker-compose.yml  implementation-plan-category6-clinical-ai.md  pyproject.toml  temp_conftest.py
api/: API-GUIDE.md  dependencies.py  main.py  middleware.py
api/routers/: health.py
docs/: CODE-QUALITY.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_audit_trail.py  003_memory_tables.py  004_workflow_state.py
tests/: conftest.py  conftest.py.fixed
tests/unit/: test_config.py  test_conftest.py  test_db_clients.py  test_logging.py  test_schemas.py
