[project]
name = "clinical-ai-platform"
version = "0.1.0"
description = "Clinical AI Platform — Agentic AI System for Clinical & Life-Sciences Workflows"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.3",
    "sqlalchemy[asyncio]>=2.0.31",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "redis>=5.0.6",
    "neo4j>=5.21.0",
    "langgraph>=0.1.4",
    "anthropic>=0.31.1",
    "structlog>=24.2.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.1",
    "tenacity>=8.4.1",
    "httpx>=0.27.0",
    "sentence-transformers>=3.3.0",
    "pgvector>=0.3.1",
    "rank-bm25>=0.2.2",
    "chainlit>=1.1.300",
    "py-spy>=0.3.14",
    "prometheus-client>=0.20.0",
    "langfuse>=2.33.0",
    "PyMuPDF>=1.24.5",
    "pdfplumber>=0.11.1",
    "pytesseract>=0.3.10",
]

[tool.uv]
workspace = { members = ["packages/*"] }

[tool.uv.sources]
clinical-ai-shared = { workspace = true }
clinical-ai-clinflow = { workspace = true }
clinical-ai-memory = { workspace = true }
clinical-ai-triage = { workspace = true }
clinical-ai-pharma = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.10.0",
    "ruff>=0.4.9",
    "pre-commit>=3.7.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "evaluation: marks tests as evaluation tests",
]
